// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 matches the snapshot 1`] = `
<body>
  <div>
    <h1
      class="MuiTypography-root MuiTypography-h1 MuiTypography-gutterBottom css-a4d0r7-MuiTypography-root"
    />
  </div>
</body>
`;

exports[`H2 matches the snapshot 1`] = `
<body>
  <div>
    <h2
      class="MuiTypography-root MuiTypography-h2 MuiTypography-gutterBottom css-i1hrn3-MuiTypography-root"
    />
  </div>
</body>
`;

exports[`H3 matches the snapshot 1`] = `
<body>
  <div>
    <h3
      class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1mktp8m-MuiTypography-root"
    />
  </div>
</body>
`;

exports[`H4 matches the snapshot 1`] = `
<body>
  <div>
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
    />
  </div>
</body>
`;

exports[`Login matches the snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-1yg6i26"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-hip9hq-MuiPaper-root-MuiAppBar-root"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1t29gy6-MuiToolbar-root"
        >
          
          <div
            class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineNone css-1qqbuje-MuiTypography-root-MuiLink-root"
            href="/"
          >
            Hot Ekspresso Travel ✈️
          </div>
          
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
      />
    </div>
  </div>
</body>
`;
